support pre-effect and post effect
Signed-off-by: sharkdynamics <chessplayer@126.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Camera2SurfaceActivity" />
+        <activity android:name=".CamActivity" />
     </application>
 
 </manifest>
