--- a/graphics/build.gradle
+++ b/graphics/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation project(path: ':opencv4.5.2')
     implementation project(path: ':basic')
+    implementation files('libs\\assimp-all.jar')
     //implementation files('libs/assimp-all.jar')
 
     testImplementation 'junit:junit:4.+'
